// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render dot 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#505256",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "bold",
        "letterSpacing": 1,
        "lineHeight": 18,
        "textTransform": "uppercase",
      },
      undefined,
    ]
  }
>
   · 
</Text>
`;

exports[`render dot with style 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#505256",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "bold",
        "letterSpacing": 1,
        "lineHeight": 18,
        "textTransform": "uppercase",
      },
      Object {
        "color": "blue",
      },
    ]
  }
>
   · 
</Text>
`;
